# hamonize

./: ..all-contributorsrc  .all-contributorsrc  .gitignore  .gitmessage.txt  .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Changelog.md  ISSUE_TEMPLATE.md  LICENSE.APACHE2  LICENSE.md  README.md  SECURITY.md
.github/: CODEOWNERS  dependabot.yml
adminkey/: getAdminkey.sh  getAdminkey.sh_aa
cla/: HamoniKRCLA_en.md  HamoniKRCLA_ko.md
hamonize-admin/: CMakeLists.txt  CMakeLists_user.txt  COPYING  INSTALL  NOTICE.md  README.md  postinst  postinst_user  prerm  readme.md
hamonize-admin/cli/: CMakeLists.txt  hamonize-cli.1  hamonize-cli.rc.in  hamonize-wcli.rc.in
hamonize-admin/cli/src/: main.cpp
hamonize-admin/configurator/: CMakeLists.txt  hamonize-configurator.1  hamonize-configurator.rc.in
hamonize-admin/configurator/data/: hamonize-configurator.desktop.in  hamonize-configurator.xpm  io.hamonize.hamonize-configurator.policy.in
hamonize-admin/configurator/resources/: configurator.qrc
hamonize-admin/configurator/src/: AccessControlPage.ui  GeneralConfigurationPage.cpp  GeneralConfigurationPage.ui  MainWindow.cpp  MainWindow.ui  MasterConfigurationPage.ui  ServiceConfigurationPage.cpp  ServiceConfigurationPage.ui
hamonize-admin/desker/: CMakeLists.txt  hamonize-desker.1
hamonize-admin/desker/data/: hamonize-master.desktop.in  hamonize-master.exe.manifest.in  org.hamonikr.SDesker.conf
hamonize-admin/desker/resources/: examples.qrc
hamonize-admin/desker/src/: CenterCore.cpp  CenterCore.h  DeskerSessionControl.cpp  DeskerSessionControl.h  DeskerWidget.cpp  DeskerWidget.h  HWInfo.cpp  HWInfo.h  main.cpp
hamonize-admin/desker/src/backup/: DeskerWidget.cpp  DeskerWidget.h
hamonize-admin/master/: CMakeLists.txt  hamonize-master.1  hamonize-master.rc.in
hamonize-admin/master/data/: hamonize-master.desktop.in  hamonize-master.exe.manifest.in  hamonize-master.xpm  hamonize-remote.desktop
hamonize-admin/master/src/: ComputerControlListModel.cpp  ComputerManager.cpp  MainWindow.cpp  MainWindow.ui  UserConfig.cpp  main.cpp
hamonize-admin/plugins/: CMakeLists.txt
hamonize-admin/plugins/authkeys/: AuthKeysConfigurationPage.ui  AuthKeysPlugin.h
hamonize-admin/plugins/config/: ConfigCommandLinePlugin.cpp  ConfigCommandLinePlugin.h
hamonize-admin/plugins/demo/: DemoClient.cpp
hamonize-admin/plugins/desktopservices/: DesktopServicesFeaturePlugin.h  OpenWebsiteDialog.ui
hamonize-admin/plugins/hcenter/: CMakeLists.txt  HCenterPlugin.cpp  HCenterPlugin.h
hamonize-admin/plugins/hcenter/common-hcenter/: CMakeLists.txt  HCenterBrowseDialog.cpp  HCenterBrowseDialog.h  HCenterBrowseDialog.ui  HCenterBrowseModel.cpp  HCenterBrowseModel.h  HCenterClient.cpp  HCenterClient.h  HCenterConfiguration.cpp  HCenterConfiguration.h  HCenterConfigurationPage.cpp  HCenterConfigurationPage.ui  HCenterDirectory.cpp  HCenterDirectory.h  HCenterNetworkObjectDirectory.cpp  HCenterNetworkObjectDirectory.h
hamonize-admin/plugins/hcenter/kldap-hcenter/: CMakeLists.txt
hamonize-admin/plugins/ldap/common/: CMakeLists.txt  LdapBrowseModel.cpp  LdapBrowseModel.h  LdapClient.cpp  LdapConfigurationPage.ui  LdapDirectory.cpp
hamonize-admin/plugins/platform/linux/: CMakeLists.txt  LinuxCoreFunctions.cpp  LinuxCoreFunctions.h  LinuxFilesystemFunctions.cpp  LinuxInputDeviceFunctions.h  LinuxPlatformPlugin.cpp  LinuxServiceCore.cpp  LinuxServiceCore.h  LinuxServiceFunctions.cpp  LinuxSessionFunctions.h  LinuxUserFunctions.cpp  LinuxUserFunctions.h
hamonize-admin/plugins/platform/linux/auth-helper/: CMakeLists.txt
hamonize-admin/plugins/platform/windows/: CMakeLists.txt  SasEventListener.cpp  WindowsCoreFunctions.h  WindowsFilesystemFunctions.cpp  WindowsPlatformPlugin.cpp  WindowsServiceFunctions.cpp  WindowsUserFunctions.cpp  WindowsUserFunctions.h
hamonize-admin/plugins/remoteaccess/: RemoteAccessFeaturePlugin.cpp  RemoteAccessFeaturePlugin.h  RemoteAccessWidget.cpp  RemoteAccessWidget.h
hamonize-admin/plugins/remoteaccessbios/: CMakeLists.txt  RemoteAccessBiosFeaturePlugin.cpp  RemoteAccessBiosFeaturePlugin.h  RemoteAccessWidget.cpp  RemoteAccessWidget.h  remoteaccessbios.qrc
hamonize-admin/plugins/screenlock/: ScreenLockFeaturePlugin.h
hamonize-admin/plugins/servicecontrol/: ServiceControlPlugin.cpp  ServiceControlPlugin.h
hamonize-admin/plugins/testing/: TestingCommandLinePlugin.h
hamonize-admin/plugins/textmessage/: TextMessageFeaturePlugin.cpp
hamonize-admin/plugins/vncserver/x11vnc-builtin/: BuiltinX11VncServer.cpp  CMakeLists.txt  x11vnc-hamonize.c
hamonize-admin/server/: CMakeLists.txt  hamonize-server.1  hamonize-server.rc.in
hamonize-admin/server/data/: hamonize-server.exe.manifest.in
hamonize-admin/server/resources/: desker.qrc  index.html
hamonize-admin/server/src/: ComputerControlClient.cpp  ComputerControlClient.h  ComputerControlServer.cpp  ComputerControlServer.h  DeskerWidget.cpp  DeskerWidget.h  VncProxyServer.cpp  main.cpp
hamonize-admin/service/: CMakeLists.txt  hamonize-service.1  hamonize-service.rc.in  hamonize.service.in
hamonize-admin/service/data/: veyon-service.exe.manifest.in
hamonize-admin/service/src/: main.cpp
hamonize-admin/worker/: CMakeLists.txt  hamonize-worker.1  hamonize-worker.rc.in
hamonize-admin/worker/src/: VeyonWorker.cpp  VeyonWorker.h
hamonize-agent/: Makefile  NOTICE.md  exebuild_command.txt  inject.js  installer.js  inyector.js  logger.js  main.js  package-lock.json  package.json  preload.js  readme.md  renderer.js
hamonize-apt/: README.md  apt_build.sh  docker-compose.yml
hamonize-center/: .factorypath  .gitignore  .project  Dockerfile  NOTICE.md  README.md  docker-compose.yml  grafana.ini  hamonize-main.json  hamonize-monitoring.json  influxdb.conf  pom.xml  readme.md  restart.sh  server.xml  telegraf.conf
hamonize-connector/: Makefile  NOTICE.md  README.md
hamonize-connector-window/: %temp%\mkBaseHamonize.ps1  .project  README.md  main.js  package-lock.json  package.json  windowHamonize.js
hamonize-noti-App/: NOTICE.md  README.md  hamonize-notiApp.html  main.js  package-lock.json  (+1 more)
(+898 files in other folders)
