#FILE(GLOB plugins RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)

#FOREACH(plugin ${plugins})
#  IF(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${plugin})
#    ADD_SUBDIRECTORY(${plugin})
#  ENDIF()
#ENDFOREACH()

ADD_SUBDIRECTORY( authkeys )
ADD_SUBDIRECTORY( builtindirectory )
ADD_SUBDIRECTORY( config )
ADD_SUBDIRECTORY( demo )
ADD_SUBDIRECTORY( desktopservices )
ADD_SUBDIRECTORY( filetransfer )
#ADD_SUBDIRECTORY( hcenter )
ADD_SUBDIRECTORY( ldap )
ADD_SUBDIRECTORY( platform )
ADD_SUBDIRECTORY( powercontrol )
ADD_SUBDIRECTORY( remoteaccess )
ADD_SUBDIRECTORY( remoteaccessbios )
ADD_SUBDIRECTORY( screenlock )
ADD_SUBDIRECTORY( screenshot )
ADD_SUBDIRECTORY( servicecontrol )
ADD_SUBDIRECTORY( shell )
ADD_SUBDIRECTORY( systemusergroups )
ADD_SUBDIRECTORY( textmessage )
ADD_SUBDIRECTORY( vncserver )

