INCLUDE(BuildVeyonApplication)
INCLUDE(WindowsBuildHelpers)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)

build_veyon_application(hamonize-service ${CMAKE_CURRENT_SOURCE_DIR}/src/main.cpp)
TARGET_LINK_LIBRARIES(hamonize-service hamonize-core)

ADD_WINDOWS_RESOURCE(hamonize-service)
MAKE_GRAPHICAL_APP(hamonize-service)

IF(VEYON_BUILD_LINUX)
    CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/hamonize.service.in ${CMAKE_CURRENT_BINARY_DIR}/hamonize.service @ONLY)
	IF(NOT SYSTEMD_SERVICE_INSTALL_DIR)
		SET(SYSTEMD_SERVICE_INSTALL_DIR /lib/systemd/system)
	ENDIF()
	INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/hamonize.service DESTINATION ${SYSTEMD_SERVICE_INSTALL_DIR})
ENDIF()

